# context-llemur

./: .gitignore  README.md  ctx.config  main.py  pyproject.toml
.cursor/rules/: context-inclusion.mdc
.gid/: rules.txt
gid/: main.py
src/: __init__.py  cli_styles.py  ctx_core.py  main.py  mcp_server.py
src/template/: ctx.txt
template/: gid.txt  goals.txt
